# com-croftsoft-lib-animation

./: Cargo.toml  README.md
src/: lib.rs
src/frame_rater/: mod.rs
src/frame_rater/simple/: mod.rs
src/frame_rater/updater/: mod.rs
src/metronome/: delta.rs  mod.rs  simple.rs  updater.rs
src/painter/: mod.rs
src/painter/background/: mod.rs
src/web_sys/: mod.rs
