[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = [
  "game-development",
  "graphics",
  "gui",
  "rendering",
  "visualization",
]
description = "CroftSoft Library for Animation"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["game-development", "graphics", "gui", "rendering", "visualization"]
license = "MIT"
name = "com-croftsoft-lib-animation"
publish = true
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-lib-animation"
version = "0.0.7-SNAPSHOT"

[dependencies]
anyhow = "1.0.75"
com-croftsoft-lib-role = "0.4.0"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "MouseEvent",
  "Window",
  "console",
]
version = "0.3.64"
