[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = [
  "game-development",
  "graphics",
  "gui",
  "rendering",
  "visualization",
]
description = "CroftSoft Library for Animation"
documentation = """https://\
  docs.rs/com-croftsoft-lib-animation/latest/com_croftsoft_lib_animation/"""
edition = "2024"
homepage = "https://www.CroftSoft.com/"
keywords = ["game-development", "graphics", "gui", "rendering", "visualization"]
license = "MIT"
name = "com-croftsoft-lib-animation"
publish = false
readme = "README.md"
repository = """\
  https://github.com/david-wallace-croft/com-croftsoft-lib-animation"""
rust-version = "1.86.0"
version = "0.1.1-SNAPSHOT"

[dependencies]
anyhow = "1.0.97"
com-croftsoft-lib-role = "0.5.1"
futures = "0.3.30"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "MouseEvent",
  "Window",
  "console",
]
version = "0.3.68"
